# m2-deep-research

./: .env.example  .gitignore  README.md  brainstorm.py  brainstorm.ts  deno.json  main.py  pyproject.toml  research.ts
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/plugins/m2-brainstorm/: README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
.grfp/: brain-jam.md  crystal-ball.md  deep-dive.md  graph-status.json  think-tank.md
.serena/: project.yml
docs/: readme-brain-jam-transcript.json
docs/snowball/decisions/: 2026-05-26T0708-how-should-the-author-field-be-structured.md  2026-05-26T0714-how-do-you-want-to-approach-the-existing-readme.md  2026-05-26T0714-how-do-you-want-to-run-the-pipeline.md  2026-05-26T0734-anything-to-correct-or-add-before-stage-3-brain-jam-runs.md  2026-05-26T0734-which-framings-should-the-brain-jam-treat-as-the-strongest-s.md  (+29 more)
src/agents/: planning_agent.py  planning_agent.ts  supervisor.py  supervisor.ts  web_search_retriever.py  web_search_retriever.ts
src/brainstorm/: argdown_client.py  argdown_client.ts  cli.py  cli.ts  critic.py  critic.ts  dialogue.py  dialogue.ts
src/tools/: exa_tool.py  exa_tool.ts
src/utils/: config.py  config.ts
tests/: test_argdown_client.py  test_cli.py  test_critic.py  test_critic_live.py  test_dialogue.py  test_dialogue_live.py
tests/brainstorm/: argdown_client.test.ts  cli.test.ts  critic.test.ts  dialogue.test.ts
tests/research/: config.test.ts  exa_tool.test.ts  planning_agent.test.ts  supervisor.test.ts  web_search_retriever.test.ts
(+9 files in other folders)
